--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,8 +1,7 @@
 <resources>
     <string name="app_name">Campus</string>
-
-    <string name="hello_blank_fragment">Hello blank fragment</string>
     <string name="campus_connect">CampusConnect</string>
+    <string name="hello_blank_fragment">Hello Blank Fragment</string>
     <string name="back">Back</string>
     <string name="notifications">Notifications</string>
     <string name="alex_johnson">Alex Johnson</string>
