--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -22,7 +22,7 @@
     <string name="change_password">Change Password</string>
     <string name="manage_devices">Manage Devices/Sessions</string>
     <string name="app_preferences">APP PREFERENCES and GENERAL</string>
-    <string name="theme_appearance">Theme/Appearance</string>
+    <string name="theme_appearance">Dark Theme</string>
     <string name="language">Language</string>
     <string name="english">English</string>
     <string name="notification_settings">NOTIFICATION SETTINGS</string>
