Add announcement feature with image handling and view activity; update layouts and models

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -49,28 +49,21 @@
     <string name="about_legal">ABOUT and LEGAL</string>
     <string name="app_version">App Version</string>
     <string name="version_1_0_0">1.0.0</string>
-    <string name="terms_of_service">Terms of Service</string>
-    <string name="view_terms_of_service">View terms of service</string>
-    <string name="licenses">Licenses</string>
-    <string name="view_licenses">View licenses</string>
-    <string name="acknowledgements">Acknowledgements</string>
-    <string name="view_acknowledgements">View acknowledgements</string>
-    <string name="account_actions">ACCOUNT ACTIONS</string>
-    <string name="announcements_title">Announcements</string>
 
-    <!-- Announcement-related strings -->
-    <string name="add_announcement">Add new announcement</string>
-    <string name="more_options">More options</string>
-    <string name="like">Like</string>
-    <string name="comment">Comment</string>
+    <!-- Announcement list item strings -->
     <string name="share">Share</string>
     <string name="bookmark">Bookmark</string>
+    <string name="more_options">More options</string>
+    <string name="view_count">%d views</string>
+    <string name="read_time">%d min read</string>
+    <string name="status_new">New</string>
+    <string name="status_important">Important</string>
+    <string name="status_urgent">Urgent</string>
+    <string name="views_icon">Views</string>
+    <string name="time_icon">Reading time</string>
 
-    <!-- Category strings with emojis -->
-    <string name="category_all">📢 All</string>
-    <string name="category_events">🎉 Events</string>
-    <string name="category_notices">📋 Notices</string>
-    <string name="category_holidays">🏖️ Holidays</string>
-    <string name="category_academic">📚 Academic</string>
-    <string name="category_sports">⚽ Sports</string>
+    <!-- Announcement view page strings -->
+    <string name="more_actions">More Actions</string>
+    <string name="contact_information">Contact Information</string>
+
 </resources>
