Update ProfileFragment.java and strings.xml
In ProfileFragment.java, the `updateUI` method signature was changed to include `course` and `role` parameters.

In strings.xml, a new string resource named `log_out` with the value "Logout" was added.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -74,5 +74,6 @@
     <string name="category_notices">Notices</string>
     <string name="category_holidays">Holidays</string>
     <string name="category_academic">Academic</string>
+    <string name="log_out">Logout</string>
 
 </resources>
