feat: Add Swahili language support and internationalize strings
This commit introduces Swahili language support to the application and refactors the UI to use string resources instead of hardcoded text.

- Add a new `values-sw/strings.xml` file with translations for Swahili.
- Externalize hardcoded strings from various layout XML files (`.xml`) into `strings.xml` to support internationalization.
- Implement a language selection dialog in the Settings screen, allowing users to switch between English and Swahili.
- The selected language is saved in SharedPreferences and applied by recreating the activity.
- Add new drawable assets for the language selection feature, including icons for the UK and Tanzania flags and a general language icon.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -27,7 +27,7 @@
     <string name="Regstration_number"></string>
     <string name="user_role">Student</string>
     <string name="user_information">User Information</string>
-    <string name="course">Computer Science</string>
+    <string name="course">Course</string>
     <string name="year_of_study">Year: 2024/2025</string>
     <string name="event_registration">Event Registration</string>
     <string name="browse_events">Browse Events</string>
@@ -75,5 +75,136 @@
     <string name="category_holidays">Holidays</string>
     <string name="category_academic">Academic</string>
     <string name="log_out">Logout</string>
+    <string name="match_phone_setting">Match phone setting</string>
+    <string name="dark_theme">Dark Theme</string>
+    <string name="light_theme">Light Theme</string>
+    <string name="choose_language">Choose language</string>
+    <string name="swahili">Swahili</string>
+    <string name="name">Name</string>
+    <string name="registration_number">Registration Number</string>
+    <string name="are_you_sure_you_want_to_log_out_of_your_account">Are you sure you want to log out of your account?</string>
+    <string name="cancel">Cancel</string>
+    <string name="jan">Jan</string>
+    <string name="s">S</string>
+    <string name="m">M</string>
+    <string name="t">T</string>
+    <string name="w">W</string>
+    <string name="f">F</string>
+    <string name="conversation_subject">Conversation Subject</string>
+    <string name="open">OPEN</string>
+    <string name="computer_science">Computer Science</string>
+    <string name="last_message_content">Last message content...</string>
+    <string name="_2h_ago">2h ago</string>
+    <string name="hello_world">Hello World</string>
+    <string name="suggestions_inbox">Suggestions Inbox</string>
+    <string name="no_suggestions_yet">No suggestions yet</string>
+    <string name="log_in">Log In</string>
+    <string name="forgot_password">Forgot password?</string>
+    <string name="password">Password</string>
+    <string name="campus_connect_logo">Campus Connect Logo</string>
+    <string name="event_title">Event Title</string>
+    <string name="_09_00">09:00</string>
+    <string name="event_starts_on_aug_26_2025">Event starts on Aug 26, 2025</string>
+    <string name="snooze">Snooze</string>
+    <string name="dismiss">Dismiss</string>
+    <string name="news">News</string>
+    <string name="inputs">Inputs</string>
+    <string name="events">Events</string>
+    <string name="profile">Profile</string>
+    <string name="announcement_title">Announcement Title</string>
+    <string name="visibility">Visibility</string>
+    <string name="announcement_content">Announcement Content</string>
+    <string name="bold">Bold</string>
+    <string name="italic">Italic</string>
+    <string name="underline">Underline</string>
+    <string name="bullet_list">Bullet List</string>
+    <string name="numbered_list">Numbered List</string>
+    <string name="images">Images</string>
+    <string name="select_images">Select Images</string>
+    <string name="optional_add_images_to_your_announcement">Optional: Add images to your announcement</string>
+    <string name="creating_announcement">Creating announcement...</string>
+    <string name="september_23">September 23</string>
+    <string name="event_details">Event Details</string>
+    <string name="event">Event:</string>
+    <string name="meeting">Meeting</string>
+    <string name="date">Date:</string>
+    <string name="august_26_2025">August 26, 2025</string>
+    <string name="time">Time:</string>
+    <string name="_09_00_am">09:00 AM</string>
+    <string name="set_reminder">Set Reminder:</string>
+    <string name="close">Close</string>
+    <string name="new_event">New event</string>
+    <string name="done">Done</string>
+    <string name="reminder">Reminder</string>
+    <string name="title">Title</string>
+    <string name="all_day">All day</string>
+    <string name="start">Start</string>
+    <string name="august_20_2025">August 20, 2025</string>
+    <string name="_16_30">16:30</string>
+    <string name="end">End</string>
+    <string name="_17_30">17:30</string>
+    <string name="new_reminder">New reminder</string>
+    <string name="reminder_title">Reminder Title</string>
+    <string name="select_event">Select Event</string>
+    <string name="choose_an_event">Choose an event</string>
+    <string name="reminder_time">Reminder Time</string>
+    <string name="_15_minutes_before">15 minutes before</string>
+    <string name="select_reminder_time">Select reminder time</string>
+    <string name="sound_alert">Sound Alert</string>
+    <string name="search_announcements">Search Announcements</string>
+    <string name="add_announcement">Add Announcement</string>
+    <string name="_2025">2025</string>
+    <string name="year">Year</string>
+    <string name="month">Month</string>
+    <string name="add_event">Add Event</string>
+    <string name="help_us_secure_your_account">Help us Secure Your Account.</string>
+    <string name="old_password">Old Password</string>
+    <string name="new_password">New Password</string>
+    <string name="re_enter_password">Re-enter Password</string>
+    <string name="it_s_a_match">It\'s a match.</string>
+    <string name="my_conversations">My Conversations</string>
+    <string name="no_conversations_yet">No conversations yet</string>
+    <string name="start_a_conversation_by_tapping_the_button">Start a conversation by tapping the + button</string>
+    <string name="start_new_conversation">Start new conversation</string>
+    <string name="staff_dashboard">Staff Dashboard</string>
+    <string name="select_department">Select Department</string>
+    <string name="cs">CS</string>
+    <string name="it">IT</string>
+    <string name="biz">BIZ</string>
+    <string name="eng">ENG</string>
+    <string name="med">MED</string>
+    <string name="edu">EDU</string>
+    <string name="no_conversations_for_this_department">No conversations for this department</string>
+    <string name="conversations_will_appear_here_when_students_contact_this_department">Conversations will appear here when students contact this department</string>
+    <string name="computer_science_department">Computer Science Department</string>
+    <string name="student_view">Student View</string>
+    <string name="_5">5</string>
+<!--    <string name="new">New</string>-->
+    <string name="_3">3</string>
+    <string name="pending">Pending</string>
+    <string name="_12">12</string>
+    <string name="total">Total</string>
+    <string name="all">All</string>
+    <string name="resolved">Resolved</string>
+    <string name="suggestions_from_students_will_appear_here">Suggestions from students will appear here</string>
+    <string name="event_date">Event Date</string>
+    <string name="event_time">Event Time</string>
+    <string name="reply">Reply</string>
+    <string name="urgent">URGENT</string>
+    <string name="dec_15_at_14_30">Dec 15 at 14:30</string>
+    <string name="reply_text_will_appear_here">Reply text will appear here...</string>
+    <string name="staff_name_staff">Staff Name (staff)</string>
+    <string name="reg123456">REG123456</string>
+    <string name="staff_name">Staff Name</string>
+    <string name="active">ACTIVE</string>
+    <string name="student_name">Student Name</string>
+    <string name="subject_line">Subject Line</string>
+    <string name="last_message_preview">Last message preview...</string>
+    <string name="aug_28_2025_10_30">Aug 28, 2025 10:30</string>
+    <string name="health_department">Health Department</string>
+    <string name="delivered">DELIVERED</string>
+    <string name="delivered_to_health_department">Delivered to Health Department</string>
+    <string name="aug_29_14_30">Aug 29, 14:30</string>
+    <string name="click_to_view_more">Click to view more...</string>
 
 </resources>
